--- a/utility-service backend/package.json
+++ b/utility-service backend/package.json
@@ -17,6 +17,8 @@
     "joi": "^18.0.1",
     "knex": "^3.1.0",
     "mysql2": "^3.15.3",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "winston": "^3.18.3"
   },
   "devDependencies": {
